--- a/SimulacionCOVID-19/Properties/Resources.resx
+++ b/SimulacionCOVID-19/Properties/Resources.resx
@@ -247,4 +247,16 @@
   <data name="mujerSaludable1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\mujerSaludable.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="hombreOOxigeno" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hombreOOxigeno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="hombreOxigeno" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\hombreOxigeno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mujerOOxigeno" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mujerOOxigeno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="mujerOxigeno" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\mujerOxigeno.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
